...
                    textAlign: TextAlign.left),
                const SizedBox(height: 48),
                StreamBuilder<String>(
                    stream: _forgotPasswordBloc.invalidEmailStream,
                    builder: (context, snapShot) {
                      return TextField(
                          key: const Key("text_field_email_address"),
                          decoration: InputDecoration(
                            icon: const Icon(Icons.email_outlined),
                            hintText: S
                                .of(context)
                                .title_forgot_password_screen_email_address_hint,
                            enabledBorder: const UnderlineInputBorder(
...
