...
            final value = snap.data!;
            final displayTime = StopWatchTimer.getDisplayTime(value,
                hours: false, minute: true, second: true, milliSecond: false);

            return _count_down_end == value
                ? GestureDetector(
                    key: const Key('resend_now'),
                    onTap: widget.onTap,
                    child: Text(
                      S.of(context).title_resend,
                      style:
                          const TextStyle(fontSize: 14.0, color: Colors.black),
                    ))
                : Text(
                    key: const Key('count_down_timer'),
                    S.of(context).title_resend_in + displayTime,
                    style: const TextStyle(
                        fontSize: 14.0, color: Color(0xFFA5A7AC)),
                  );
          },
        ),
...
